--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "react-dom": "^19.2.4",
     "framer-motion": "^12.34.0",
+    "@supabase/supabase-js": "^2.48.1",
     "react": "^19.2.4"
   },
   "devDependencies": {
