--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "react": "^19.2.4",
     "react-dom": "^19.2.4",
-    "framer-motion": "^12.34.0",
-    "@supabase/supabase-js": "^2.48.1",
-    "react": "^19.2.4"
+    "framer-motion": "11.11.11",
+    "@supabase/supabase-js": "2.45.4"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
